test/libsolidity/syntaxTests/using/using_non_function.sol
contract C {
    function() internal pure x;
    using {x} for uint;
}
// ----
// TypeError 8187: (56-57='x'): Expected function name.
